@@ -1329,7 +1329,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '139';
+$wgStyleVersion = '140';
 
 
 # Server-side caching:
